--- a/Editor/WiseTwin.Editor.asmdef
+++ b/Editor/WiseTwin.Editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "WiseTwin.Editor",
-    "rootNamespace": "",
+    "rootNamespace": "WiseTwin.Editor",
     "references": [
         "WiseTwin.Runtime"
     ],
@@ -11,7 +11,7 @@
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
+    "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
